test/zinc_source/compile_errors/decorators/13_nested_function_unsupported.zn
// expected-error: nested function decorator support is not implemented yet: 'inner'
fn trace(f) {
    return f
}

fn outer() {
    @trace
    fn inner() {
        return 1
    }

    return inner()
}

fn main() {
    print(outer())
}
